[package]
name = "advent_of_code"
version = "0.9.0"
authors = ["Andrew Henshaw"]
edition = "2021"
default-run = "advent_of_code"
publish = false

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
counter = "0.5.7"
itertools = "0.12.0"
pico-args = "0.5.0"
prse = "1.0.3"
regex = "1.10.2"
